# fb2voice-ru

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
src/fb2voice_ru/: __init__.py  fb2.py  logger.py  main.py  normalizer.py  tts.py
src/fb2voice_ru/data/: sample.fb2
