[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fb2voice-ru"
version = "0.3.0"
description = "Convert FB2 e-books to MP3 audiobooks using Silero TTS"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "Kliachin Aleksei", email = "madest92@gmail.com"}]

dependencies = [
    "lxml>=6.0.0",
    "mutagen>=1.45.0",
    "num2words>=0.5.14",
    "silero-stress>=1.4.0",
    "scipy>=1.17.0", # needs for torch
    "soundfile>=0.13.0",
    "tqdm>=4.67.0",
]

[project.optional-dependencies]
torch = [
    "torch>=2.10.0",
    "torchaudio>=2.10.0"
]

[project.scripts]
fb2voice-ru = "fb2voice_ru.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/fb2voice_ru"]

[project.urls]
Homepage = "https://github.com/madest92/fb2voice-ru"
Documentation = "https://github.com/madest92/fb2voice-ru#readme"
Repository = "https://github.com/madest92/fb2voice-ru.git"
Issues = "https://github.com/madest92/fb2voice-ru/issues"
